--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,21 @@
-altgraph==0.17.2
-appdirs==1.4.3
-apt-xapian-index==0.49
-autopep8==1.6.0
-backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.10.0
-blinker==1.4
-buildozer==1.2.0
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-coverage==6.3.2
-cryptography==2.8
-cupshelpers==1.0
-cycler==0.10.0
-Cython==0.29.19
-dbus-python==1.2.16
-distlib==0.3.3
-distro==1.4.0
-distro-info===0.23ubuntu1
-entrypoints==0.3
-filelock==3.3.1
-flake8==4.0.1
-gpg===1.13.1-unknown
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==1.5.0
-Jinja2==3.0.2
-keyring==18.0.1
-kiwisolver==1.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-Mako==1.1.0
-MarkupSafe==2.0.1
-matplotlib==3.1.2
-mccabe==0.6.1
-mock==4.0.3
-more-itertools==4.2.0
-netifaces==0.10.4
-nose==1.3.7
-numpy==1.17.4
-oauthlib==3.1.0
-olefile==0.46
-pep517==0.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-Pivy==0.6.5
-platformdirs==2.4.0
-pycairo==1.16.2
-pycodestyle==2.8.0
-pycrypto==2.6.1
-pycups==1.9.73
-pyflakes==2.4.0
-PyGObject==3.36.0
-pyinstaller-hooks-contrib==2021.3
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-PyQt5==5.14.1
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytoml==0.1.21
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-sh==1.14.2
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-soupsieve==2.3.1
-systemd-python==234
-toml==0.10.2
-ubuntu-advantage-tools==27.8
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.9.0
-wadllib==1.3.3
-xkit==0.0.0
-zipp==1.0.0
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+docutils==0.18.1
+idna==3.3
+Kivy==2.1.0
+Kivy-Garden==0.1.5
+numpy==1.22.4
+opencv-python==4.5.5.64
+packaging==21.3
+Pillow==9.1.1
+pyDeprecate==0.3.2
+Pygments==2.12.0
+pyparsing==3.0.9
+requests==2.27.1
+soupsieve==2.3.2.post1
+torch==1.11.0
+torchmetrics==0.8.1
+torchvision==0.12.0
+typing-extensions==4.2.0
+urllib3==1.26.9
