--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 docutils==0.18.1
 Flask==2.1.2
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
